[package]
name = "raiot-client-base"
version = "0.1.0"
authors = ["Maayan Hanin <maayan.asa.hanin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raiot-protocol = { path = "../raiot-protocol", features = ["standard", "sas", "certificates"] }
# raiot-mqtt = { path = "../raiot-mqtt" }

serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["v4"] }