[package]
name = "raiot-client"
version = "0.1.0"
authors = ["Maayan Hanin <maayan.asa.hanin@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raiot-protocol = { path = "../raiot-protocol", features = ["standard", "sas", "certificates"] }
# raiot-auth =  { path = "../raiot-auth" }
raiot-buffers = { path = "../raiot-buffers" }
raiot-streams = { path = "../raiot-streams", features = ["use-native-tls"] }
raiot-mqtt = { path = "../raiot-mqtt" }
raiot-client-base = { path = "../raiot-client-base" }

mqtt-protocol = "0.10"
native-tls = { version = "0.2" }

log = "0.4.8"
env_logger = "0.7.1"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["v4"] }
async-std = "1.6.2"