[package]
name = "raiot-mqtt"
version = "0.1.0"
authors = ["Maayan Hanin <maayan.asa.hanin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raiot-buffers = { path = "../raiot-buffers" }
raiot-test-utils = { path = "../raiot-test-utils" }
mqtt-protocol = "0.10"
log = "0.4.8"