[package]
name = "raiot-protocol"
version = "0.1.0"
authors = ["Maayan Hanin <maayan.asa.hanin@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = """
Data types for Azure IoT Hub
"""

[lib]
path = "src/lib.rs"

[dependencies]
enum-display-derive = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mqtt-protocol = "0.10"
url = "1.7"
percent-encoding = "2.1.0"
log = "0.4.8"
hmac = { version = "0.7", optional = true }
chrono = { version = "0.4", optional = true }
sha2 = { version = "0.8", optional = true }
base64 = { version = "0.10", optional = true }

[features]
default = ["standard", "sas", "certificates"]

# IoT Hub functional features
c2d = []
twin = []
direct-methods = []
telemetry = []
basic = ["telemetry"]
standard = ["telemetry", "twin", "c2d", "direct-methods"]

# Auth Features
sas = ["hmac", "chrono", "sha2", "base64"]
certificates = []