[package]
name = "raiot-twin"
version = "0.1.0"
authors = ["Maayan Hanin <maayan.asa.hanin@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
mqtt-protocol = "0.10"
uuid = "0.7"

raiot-codec = { path = "../raiot-codec", features = ["twin"] }
raiot-protocol = { path = "../raiot-protocol", features = ["twin", "c2d", "direct-methods"] }

native-tls = "0.2"